--- a/style.css
+++ b/style.css
@@ -111,17 +111,22 @@
   }
   
   .current-weather .icon {
-    text-align: center;
+    text-align: left; /* Align the icon to the left */
   }
   
   .current-weather .icon img {
     max-width: 120px;
-    margin-top: -15px;
-  }
+    margin-top: 50px;
+    margin-left: -769px; /* Adjust the margin to your preference */
+    display: inline-block; 
+}
+
   
   .current-weather .icon h6 {
     margin-top: -10px;
     text-transform: capitalize;
+    display: inline-block; /* Display the description as an inline-block element */
+  margin-left: 10px; /* Add some space between the icon and description */
   }
   
   .days-forecast h2 {
